# databricks-capstone

./: .gitignore  CLAUDE.md  Makefile  README.md  SECURITY.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  questions.yaml  retail_questions.yaml  retail_questions_draft.yaml
data_gen/: README.md  convert_uci.py  generate_banking_data.py
docs/: README.md  admin-governance.md  architecture-v2.md  architecture.md  backlog-free-edition-limits.md  demo-script.md  drift-cadence.md  eval-evidence.md  interview-pitch.md  roadmap-v3.md  rtb-scenarios.md  runbook.md  semantic-failure-taxonomy.md  steward-loop.md  study-plan.md  workspace-tour.md
infra/: COVERAGE.md  README.md  bootstrap.py  rbac.md  workspace_setup.sql
notebooks/: 10_ingest_telemetry.py  20_detect_drift.py  30_apply_healings.py  40_run_benchmarks.py  50_ds_kpis_and_models.py  60_semantic_router.py  61_router_arm.py  70_run_sessions.py  80_steward_console.py  85_escalate_and_apply.py  90_daily_report.py  README.md
pipelines/: README.md  retail_medallion.py
resources/: autopilot_jobs.yml  retail_pipeline.yml
sql/: README.md  admin_monitoring.sql  bootstrap.sql  business_kpis.sql  dashboard_queries.sql  metric_views.sql  retail_metric_views.sql
src/genie_autopilot/: README.md  __init__.py  certify.py  cli.py  config.py  drift.py  drift_pack.py  evals.py  fleet.py  fleet_retail.py  genie_api.py  (+11 more)
tests/: README.md  test_drift.py  test_drift_pack.py  test_fleet_retail.py  test_healing.py  test_producer.py  test_quality.py  test_session_engine.py  test_steward.py
