[project]
name = "genie-autopilot"
version = "0.1.0"
description = "Autonomous Context Engine: self-healing semantic layer on Unity Catalog + Metric Views, hydrating Genie context from user-interaction telemetry"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.38",
    "databricks-sql-connector>=3.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
